fixed various potential NPEs and code flaws (findbugs)