@@ -50,9 +50,9 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 	protected EObject rightParent;
 
 	/**
-	 * The default value of the '{@link #getSubchanges() <em>Subchanges</em>}' attribute.
-	 * <!-- begin-user-doc
+	 * The default value of the '{@link #getSubchanges() <em>Subchanges</em>}' attribute. <!-- begin-user-doc
 	 * --> <!-- end-user-doc -->
+	 * 
 	 * @see #getSubchanges()
 	 * @generated
 	 * @ordered
@@ -60,9 +60,9 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 	protected static final int SUBCHANGES_EDEFAULT = 0;
 
 	/**
-	 * The cached value of the '{@link #getSubchanges() <em>Subchanges</em>}' attribute.
-	 * <!-- begin-user-doc
+	 * The cached value of the '{@link #getSubchanges() <em>Subchanges</em>}' attribute. <!-- begin-user-doc
 	 * --> <!-- end-user-doc -->
+	 * 
 	 * @see #getSubchanges()
 	 * @generated
 	 * @ordered
@@ -70,8 +70,8 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 	protected int subchanges = SUBCHANGES_EDEFAULT;
 
 	/**
-	 * This is true if the Subchanges attribute has been set.
-	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * This is true if the Subchanges attribute has been set. <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 * @ordered
 	 */
@@ -79,6 +79,7 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	protected DiffGroupImpl() {
@@ -87,6 +88,7 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@Override
@@ -97,13 +99,14 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 					return getRightParent();
 				return basicGetRightParent();
 			case DiffPackage.DIFF_GROUP__SUBCHANGES:
-				return new Integer(getSubchanges());
+				return Integer.valueOf(getSubchanges());
 		}
 		return super.eGet(featureID, resolve, coreType);
 	}
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@Override
@@ -119,6 +122,7 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@Override
@@ -136,6 +140,7 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@Override
@@ -174,6 +179,7 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	public boolean isSetSubchanges() {
@@ -182,16 +188,18 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	public void setSubchanges(int newSubchanges) {
-		int oldSubchanges = subchanges;
+		final int oldSubchanges = subchanges;
 		subchanges = newSubchanges;
-		boolean oldSubchangesESet = subchangesESet;
+		final boolean oldSubchangesESet = subchangesESet;
 		subchangesESet = true;
-		if (eNotificationRequired())
+		if (eNotificationRequired()) {
 			eNotify(new ENotificationImpl(this, Notification.SET, DiffPackage.DIFF_GROUP__SUBCHANGES,
 					oldSubchanges, subchanges, !oldSubchangesESet));
+		}
 	}
 
 	/**
@@ -216,20 +224,23 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	public void unsetSubchanges() {
-		int oldSubchanges = subchanges;
-		boolean oldSubchangesESet = subchangesESet;
+		final int oldSubchanges = subchanges;
+		final boolean oldSubchangesESet = subchangesESet;
 		subchanges = SUBCHANGES_EDEFAULT;
 		subchangesESet = false;
-		if (eNotificationRequired())
+		if (eNotificationRequired()) {
 			eNotify(new ENotificationImpl(this, Notification.UNSET, DiffPackage.DIFF_GROUP__SUBCHANGES,
 					oldSubchanges, SUBCHANGES_EDEFAULT, oldSubchangesESet));
+		}
 	}
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@Override
@@ -239,16 +250,18 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	public EObject getRightParent() {
 		if (rightParent != null && rightParent.eIsProxy()) {
-			InternalEObject oldRightParent = (InternalEObject)rightParent;
+			final InternalEObject oldRightParent = (InternalEObject)rightParent;
 			rightParent = eResolveProxy(oldRightParent);
 			if (rightParent != oldRightParent) {
-				if (eNotificationRequired())
+				if (eNotificationRequired()) {
 					eNotify(new ENotificationImpl(this, Notification.RESOLVE,
 							DiffPackage.DIFF_GROUP__RIGHT_PARENT, oldRightParent, rightParent));
+				}
 			}
 		}
 		return rightParent;
@@ -256,6 +269,7 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	public EObject basicGetRightParent() {
@@ -264,14 +278,16 @@ public class DiffGroupImpl extends DiffElementImpl implements DiffGroup {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	public void setRightParent(EObject newRightParent) {
-		EObject oldRightParent = rightParent;
+		final EObject oldRightParent = rightParent;
 		rightParent = newRightParent;
-		if (eNotificationRequired())
+		if (eNotificationRequired()) {
 			eNotify(new ENotificationImpl(this, Notification.SET, DiffPackage.DIFF_GROUP__RIGHT_PARENT,
 					oldRightParent, rightParent));
+		}
 	}
 
 } // DiffGroupImpl
